feat(main): make course structure

--- a/labs/lab10/report/bib/cite.bib
+++ b/labs/lab10/report/bib/cite.bib
@@ -1,8 +1,8 @@
 @Online{gnu-doc:bash,
   Institution = {Free Software Foundation},
-  Title = {{GNU Bash Manual}},
-  URL = {https://www.gnu.org/software/bash/manual/},
-  Year = 2016,
+  Title = {{Лабораторная работа № 10}},
+  URL = {https://esystem.rudn.ru/},
+  Year = 2023erdf,
   Language = {},
   numpages = {},
   EPrintClass = {},
